[package]
name = "legacy-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
cacache = { version = "13.1.0", default-features = false }
http-cache-reqwest = { version = "0.16.0", features = ["manager-cacache"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
reqwest-middleware = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
